[project]
name = "comperative-framework-database-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "marimo>=0.15.5",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "seaborn>=0.13.2",
]
